# Discord_bot

./: .gitignore  Dev.ipynb  README.md  launch_bot.py  main.py  notify_discord.py  pyproject.toml  requirements.txt
.github/workflows/: notify_user.yml
rendered/: leaderboard_render.html
schemas/: __init__.py  players.py
src/: __init__.py  constants.py  discord_utils.py  display_helper.py  imdb.py  renderer.py  utils.py  valorant.py
static/: style.css
templates/: leaderboard.html
